[tool.poetry]
name = "cisco2huawei"
version = "0.1.0"
description = "Cisco2Huawei config converter"
authors = ["ivan_lysogor <ilysogor@gmail.com>"]
license = "LGPL"

[tool.poetry.dependencies]
python = "^3.8"
ciscoconfparse = "^1.6.38"
pydantic = "^1.9.0"
pynetbox = "^6.6.1"
netmiko = "^3.3.0"
napalm = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
